:bug: fix page jump on where are all the vowels

--- a/src/components/tldr/TLDR.css
+++ b/src/components/tldr/TLDR.css
@@ -8,6 +8,7 @@
 }
 
 .tldr__image {
-  width: 50%;
+  height: 300px;
+  min-height: 300px;
   align-self: center;
 }
